--- a/_posts/2022-04-28-app_recom_1_2022.md
+++ b/_posts/2022-04-28-app_recom_1_2022.md
@@ -1,10 +1,10 @@
 ---
 layout:     post
-title:      App Recommendations for 2022 First Quarter 
+title:      App Recommendation for 2022 First Quarter 
 subtitle:   App Recommendation - AdGuard 🪧
 date:       2022-04-28
 author:     Sam
-header-img: img/post-bg-cook.jpg
+header-img: img/rec-1.jpg
 catalog: true
 tags:
     - APP
