--- a/_posts/2022-04-28-app_recom_1_2022.md
+++ b/_posts/2022-04-28-app_recom_1_2022.md
@@ -55,4 +55,7 @@ Give it a try and see how it can improve your browsing experience.
 
 
 
+## Copyright ✅
+Copyright 2022 by Sam Luo. All rights reserved. This blog post may not be reproduced or distributed in any form without the written permission of the copyright holder.
+
 
