--- a/_posts/2022-06-06-WWDC-2022 - IOS 16.md
+++ b/_posts/2022-06-06-WWDC-2022 - IOS 16.md
@@ -73,4 +73,7 @@ As users and fans, we can only accept this reality and appreciate the subtle enh
 
 
 
+## Copyright ✅
+Copyright 2022 by Sam Luo. All rights reserved. This blog post may not be reproduced or distributed in any form without the written permission of the copyright holder.
+
 
